<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <item
        android:id="@+id/menu_load_json"
        android:icon="@drawable/ic_folder_open_white"
        android:title="@string/load_json"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_load_sample"
        android:title="@string/load_sample"
        app:showAsAction="never" />
    <item android:title="演化控制" >
        <menu >
            <item
                android:id="@+id/menu_limit"
                android:title="@string/limit_set" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never"></item>
</menu>
